<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_ls"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        tools:context=".ui.auth.LoginActivity">

        <TextView
            style="@style/authButton"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="2"
            android:text="@string/login_to_the_gaming_fun_today" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center">

            <TextView
                android:id="@+id/tvLogin"
                style="@style/authButton"
                android:text="Log In" />

            <EditText
                android:id="@+id/et_login_mobileNo"
                style="@style/etStyle"
                android:layout_below="@id/tvLogin"
                android:hint="@string/mobile_number" />

            <EditText
                android:id="@+id/et_login_password"
                style="@style/etStyle"
                android:layout_below="@id/et_login_mobileNo"
                android:hint="@string/password" />

            <RelativeLayout
                android:id="@+id/btn_login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_login_password">

                <View
                    style="@style/authButton"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/yellow" />

                <TextView
                    style="@style/authButton"
                    android:backgroundTint="@color/blue"
                    android:text="@string/login" />
            </RelativeLayout>

            <TextView
                android:id="@+id/btn_login_forgot_password"
                style="@style/simpleTV"
                android:layout_below="@id/btn_login_user"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:text="@string/forgot_password"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                style="@style/tv_header"
                android:text="@string/or_connect_with" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:layout_margin="5dp" />

            <RelativeLayout
                android:id="@+id/btn_login_google"
                style="@style/authButton"
                android:backgroundTint="@color/green">

                <TextView
                    style="@style/simpleTV"
                    android:layout_centerInParent="true"
                    android:drawableStart="@drawable/google"
                    android:text=" Google" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>