<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:layout_weight="5"
        android:src="@drawable/app_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_auth_login"
            style="@style/authButton"
            android:backgroundTint="@color/blue"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btn_auth_signUp"
            style="@style/authButton"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_up" />

        <TextView
            style="@style/tv_header"
            android:layout_marginTop="15dp"
            android:text="@string/or_connect_with" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_auth_fb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:layout_margin="5dp" />

        <RelativeLayout
            android:id="@+id/btn_auth_google"
            style="@style/authButton"
            android:backgroundTint="@color/green">

            <TextView
                style="@style/simpleTV"
                android:layout_centerInParent="true"
                android:drawableStart="@drawable/google"
                android:text=" Google" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>